--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             video{
                 max-width: 100%;
             }
+            video{
+                display: block;
+            }
         </style>
     </head>
     <body>
