--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <code>&lt;p role=&quot;headhunter-anti-spam&quot;&gt;</code>
             <br>
             <p>
-                I’m currently not looking work, I <em>LOVE</em> my job at CityLife, located in the <a href="http://vikingco.com/">VikingCo Headquarters</a>
+                I’m currently not looking a job, I <em>LOVE</em> my job at CityLife, located in the <a href="http://vikingco.com/">VikingCo Headquarters</a>
             </p>
             <code>&lt;/p&gt;</code>
             <ul>
