Add link to project on GitHub

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             	<a href="https://github.com/KennyBrijs">GitHub</a> and <a href="https://coderwall.com/kennybrijs">CoderWall</a>
             </p>
 
-            <p><a href="http://sveinn.be">Design by SVEINN</a>–<a href="">View code on GitHub</a></p>
+            <p><a href="http://sveinn.be">Design by SVEINN</a>–<a href="https://github.com/KennyBrijs/kennybrijs.github.io">View code on GitHub</a></p>
         </footer>
 
         <!-- Todo: html tag zoeken die text weergeeft voor screenreaders -->
