--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <![endif]-->
 
         <header id="introduction" role="masthead">
-            <h1>Keny Brijs</h1>
+            <h1>Kenny Brijs</h1>
             <h2>Front-End Webdeveloper</h2>
 
             <p>Hi! I’m Kenny, a Front-End Webdeveloper from <a href="https://www.google.be/maps/place/Webdesign+en+-ontwikkeling/@50.9452126,4.0294635,17z/data=!4m7!1m4!3m3!1s0x47c397fe791f9e19:0x690c6108e171e5ab!2sVilainstraat!3b1!3m1!1s0x0:0xaeefb8f985b6191b">Aalst, Belgium</a>
