--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <h1>Kenny Brijs</h1>
             <h2>Front-End Webdeveloper</h2>
 
-            <p>Hi! I’m Kenny, a Front-End Webdeveloper from <a href="https://www.google.be/maps/place/Webdesign+en+-ontwikkeling/@50.9452126,4.0294635,17z/data=!4m7!1m4!3m3!1s0x47c397fe791f9e19:0x690c6108e171e5ab!2sVilainstraat!3b1!3m1!1s0x0:0xaeefb8f985b6191b">Aalst, Belgium</a>
+            <p><a class="link-invisible" href="https://www.youtube.com/watch?v=VV6In1K8zKk">Hi! I’m Kenny</a>, a Front-End Webdeveloper from <a href="https://www.google.be/maps/place/Webdesign+en+-ontwikkeling/@50.9452126,4.0294635,17z/data=!4m7!1m4!3m3!1s0x47c397fe791f9e19:0x690c6108e171e5ab!2sVilainstraat!3b1!3m1!1s0x0:0xaeefb8f985b6191b">Aalst, Belgium</a>
             currently working <a href="https://twitter.com/CityLifeBE">@CityLifeBE</a> in <a href="https://www.google.be/maps/place/VikingCo/@50.952665,5.350945,17z/data=!3m1!4b1!4m2!3m1!1s0x47c121428946bea7:0xa12ca4effbefe9db">Hasselt, Belgium</a></p>
         </header>
         
         <div id="projects">
-            <h3>Projects for CityLife</h3>
+            <h3>CityLife Projects</h3>
             <ul class="portfolio">
                 <li>
                     <h4><a href="https://citylife.be/">CityLife</a></h4>
@@ -91,11 +91,12 @@
             	<a href="https://github.com/KennyBrijs">GitHub</a> and <a href="https://coderwall.com/kennybrijs">CoderWall</a>
             </p>
 
+            <!-- Todo: html tag zoeken die text weergeeft voor screenreaders -->
+            <span class="screenreader">Bye Y’all!</span>
+
             <p><a href="http://sveinn.be">Design by SVEINN</a>–<a href="https://github.com/KennyBrijs/kennybrijs.github.io">View code on GitHub</a></p>
         </footer>
 
-        <!-- Todo: html tag zoeken die text weergeeft voor screenreaders -->
-		<span class="screenreader">Bye Y’all!</span>
 
     </body>
 </html>
