--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
         <!--[if lt IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
-        <p>Pork in wrogress</p>
-
         <div class="content">
-            <header id="introduction" role="masthead">
-                <h1>Kenny Brijs</h1>
+            <header id="header" role="masthead">
+                <h1><span class="kenny">Kenny</span> <span class="brijs">Brijs</span></h1>
                 <h2>Front-End Webdeveloper</h2>
             </header>
         </div>
         
         <div class="container-color">
             <div class="content">
-                <p><a class="link-invisible" href="https://www.youtube.com/watch?v=VV6In1K8zKk">Hi! I’m Kenny</a>, a Front-End Webdeveloper from <a href="https://www.google.be/maps/place/Webdesign+en+-ontwikkeling/@50.9452126,4.0294635,17z/data=!4m7!1m4!3m3!1s0x47c397fe791f9e19:0x690c6108e171e5ab!2sVilainstraat!3b1!3m1!1s0x0:0xaeefb8f985b6191b">Aalst, Belgium</a> currently working <a href="https://twitter.com/CityLifeBE">@CityLifeBE</a> in <a href="https://www.google.be/maps/place/VikingCo/@50.952665,5.350945,17z/data=!3m1!4b1!4m2!3m1!1s0x47c121428946bea7:0xa12ca4effbefe9db">Hasselt, Belgium</a></p>
+                <p id="intro" class="lead"><a class="link-invisible" href="https://www.youtube.com/watch?v=VV6In1K8zKk">Hi! I’m Kenny,</a>
+                <br><br>
+                a Front-End Webdeveloper from <a href="https://www.google.be/maps/place/Webdesign+en+-ontwikkeling/@50.9452126,4.0294635,17z/data=!4m7!1m4!3m3!1s0x47c397fe791f9e19:0x690c6108e171e5ab!2sVilainstraat!3b1!3m1!1s0x0:0xaeefb8f985b6191b">Aalst, Belgium</a>
+                <br>
+                currently working <a href="https://twitter.com/CityLifeBE">@CityLifeBE</a> in <a href="https://www.google.be/maps/place/VikingCo/@50.952665,5.350945,17z/data=!3m1!4b1!4m2!3m1!1s0x47c121428946bea7:0xa12ca4effbefe9db">Hasselt, Belgium</a></p>
                 <div id="projects">
                     <h3>CityLife Projects</h3>
                     <ul class="portfolio">
@@ -101,7 +102,7 @@
         </div>
 
             <!-- Todo: html tag zoeken die text weergeeft voor screenreaders -->
-        <footer class="content">
+        <footer id="footer" class="content" role="contentinfo">
             <p><a href="http://sveinn.be">Design by SVEINN</a>–<a href="https://github.com/KennyBrijs/kennybrijs.github.io">View code on GitHub</a></p>
         </footer>
 
