--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <!--[if lt IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <p>Pork in wrogress</p>
         <div class="content">
             <header id="header" role="masthead">
                 <h1><span class="kenny">Kenny</span> <span class="brijs">Brijs</span></h1>
