--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
         <div class="content">
             <header id="header" role="masthead">
                 <h1><span class="kenny">Kenny</span> <span class="brijs">Brijs</span></h1>
-                <h2>Front-End Webdeveloper</h2>
+                <h2 style="color: #555;">Front-End Webdeveloper</h2>
             </header>
         </div>
         
@@ -45,18 +45,18 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                 currently working <a href="https://twitter.com/CityLifeBE">@CityLifeBE</a> in <a href="https://www.google.be/maps/place/VikingCo/@50.952665,5.350945,17z/data=!3m1!4b1!4m2!3m1!1s0x47c121428946bea7:0xa12ca4effbefe9db">Hasselt, Belgium</a></p>
                 <div id="projects">
                     <h3>CityLife Projects</h3>
-                    <ul class="portfolio">
+                    <ul class="is-unstyled portfolio">
                         <li>
-                            <h4><a href="https://citylife.be/">CityLife</a></h4>
-                            <a href="https://citylife.be/"><img src="style/img/projects/citylife.png" alt="CityLife Website"></a>
+                            <a class="has-img" href="https://citylife.be/"><img src="style/img/projects/citylife.png" alt="CityLife Website"></a>
+                            <h4><a href="https://citylife.be/">citylife.be</a></h4>
                         </li>
                         <li>
-                            <h4><a href="http://shoppeninleuven.be/">Shoppen in Leuven</a></h4>
-                            <a href="http://shoppeninleuven.be/"><img src="style/img/projects/shoppeninleuven.png" alt=""></a>
+                            <a class="has-img" href="http://shoppeninleuven.be/"><img src="style/img/projects/shoppeninleuven.png" alt=""></a>
+                            <h4><a href="http://shoppeninleuven.be/">shoppeninleuven.be</a></h4>
                         </li>
                         <li>
-                            <h4><a href="http://horecaleuven.be/">Horeca Leuven</a></h4>
-                            <a href="http://horecaleuven.be/"><img src="style/img/projects/horecaleuven.png" alt=""></a>
+                            <a class="has-img" href="http://horecaleuven.be/"><img src="style/img/projects/horecaleuven.png" alt=""></a>
+                            <h4><a href="http://horecaleuven.be/">horecaleuven.be</a></h4>
                         </li>
                     </ul>
                 </div>
@@ -64,26 +64,25 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
         </div>
             
         <div id="vikingstyle" class="content">
-            <code>&lt;p role=&quot;headhunter-anti-spam&quot;&gt;</code>
-            <br>
-            <p>
-                I’m currently not looking a job, I <em>LOVE</em> my job at CityLife, located in the <a href="http://vikingco.com/">VikingCo Headquarters</a>
+            <p class="lead">
+                <code>&lt;p role=&quot;headhunter-anti-spam&quot;&gt;</code><br>
+                I’m currently not looking a job, I love my job at CityLife, located in the <a href="http://vikingco.com/">VikingCo Headquarters</a>
+                <br><code>&lt;/p&gt;</code>
             </p>
-            <code>&lt;/p&gt;</code>
-            <ul>
+            <ul class="is-unstyled">
                 <li>
-                    <a href="https://www.facebook.com/photo.php?fbid=910276928998245">These guys are crazy!</a>
+                    <h5>These guys are crazy!</h5>
                     <!-- Facebook Picture -->
                     <div id="fb-root"></div> <script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/en_US/all.js#xfbml=1"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script>
                     <div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1" data-width="350"><div class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1">Post</a> by <a href="https://www.facebook.com/mobilevikings">Mobile Vikings</a>.</div></div>
                 </li>
                 <li>
-                    <a href="http://www.smileapp.io/s/gjJMgFXSxV">And so am I ;)</a>
+                    <h5>And so am I ;)</h5>
                     <!-- Smile -->
                     <video webkit-playsinline="" poster="http://files.parsetfss.com/305d4b7d-2a92-41f9-b57c-0b0ffd55fd5c/tfss-4eff88ec-4d77-4222-932b-506aa84e7df8-image.jpg">
                         <source src="http://files.parsetfss.com/305d4b7d-2a92-41f9-b57c-0b0ffd55fd5c/tfss-b9437230-0b7c-4487-afbf-87d2c5ffc3cc-video.mp4" type="video/mp4">
                     </video>
-                    <small><a href="http://www.smileapp.io/">This video was taken using Smile</a>, made by my colleagues <a href="https://twitter.com/houbenkristof">@houbenkristof</a> and <a href="https://twitter.com/bertwww">@bertwww</a></small>
+                    <small><a href="http://www.smileapp.io/s/gjJMgFXSxV">This video was taken using Smile</a>, made by my colleagues <a href="https://twitter.com/houbenkristof">@houbenkristof</a> and <a href="https://twitter.com/bertwww">@bertwww</a></small>
                 </li>
             </ul>
         </div>
@@ -95,13 +94,15 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
             </p>
 
             <p>
-            	<a href="http://be.linkedin.com/pub/kenny-brijs/33/247/926/"><img src="style/img/social/linkedin.png" alt="LinkedIn" style="width: 160px;"></a> or <a href="https://twitter.com/kennybrijs"><img src="style/img/social/twitter.png" alt="Twitter" style="width: 62px;"></a>
+            	<a class="has-img" href="http://be.linkedin.com/pub/kenny-brijs/33/247/926/"><img src="style/img/social/linkedin.png" alt="LinkedIn" style="width: 160px;"></a>
+                <a class="has-img" href="https://twitter.com/kennybrijs"><img src="style/img/social/twitter.png" alt="Twitter" style="width: 62px;"></a>
             </p>
 
             <p>And for the nerds:</p>
 
             <p>
-            	<a href="https://github.com/KennyBrijs"><img src="style/img/social/github.png" alt="GitHub" style="width: 132px;"></a> and <a href="https://coderwall.com/kennybrijs"><img src="style/img/social/coderwall.png" alt="CoderWall" style="width: 226px;"></a>
+            	<a class="has-img" href="https://github.com/KennyBrijs"><img src="style/img/social/github.png" alt="GitHub" style="width: 132px;"></a>
+                <a class="has-img" href="https://coderwall.com/kennybrijs"><img src="style/img/social/coderwall.png" alt="CoderWall" style="width: 226px;"></a>
             </p>
         </div>
 
