--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                 <br><code>&lt;/p&gt;</code>
             </p>
             <ul class="is-unstyled">
-                <li>
+                <li class="grid-left">
                     <h5>These guys are crazy!</h5>
                     <!-- Facebook Picture -->
                     <div id="fb-root"></div> <script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/en_US/all.js#xfbml=1"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script>
                     <div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1" data-width="350"><div class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1">Post</a> by <a href="https://www.facebook.com/mobilevikings">Mobile Vikings</a>.</div></div>
                 </li>
-                <li>
+                <li class="grid-right">
                     <h5>And so am I ;)</h5>
                     <!-- Smile -->
                     <video webkit-playsinline="" poster="http://files.parsetfss.com/305d4b7d-2a92-41f9-b57c-0b0ffd55fd5c/tfss-4eff88ec-4d77-4222-932b-506aa84e7df8-image.jpg">
@@ -88,21 +88,21 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
         </div>
 
         <div id="social" class="content">
-    		<p>
+    		<p class="h6">
             	But if you wanna connect,
             	you can do so through:
             </p>
 
             <p>
-            	<a class="has-img" href="http://be.linkedin.com/pub/kenny-brijs/33/247/926/"><img src="style/img/social/linkedin.png" alt="LinkedIn" style="width: 160px;"></a>
-                <a class="has-img" href="https://twitter.com/kennybrijs"><img src="style/img/social/twitter.png" alt="Twitter" style="width: 62px;"></a>
+            	<a class="social-link grid-left has-img" href="http://be.linkedin.com/pub/kenny-brijs/33/247/926/"><img src="style/img/social/linkedin.png" alt="LinkedIn" style="width: 160px;"></a>
+                <a class="social-link grid-right has-img" href="https://twitter.com/kennybrijs"><img src="style/img/social/twitter.png" alt="Twitter" style="width: 62px;"></a>
             </p>
 
-            <p>And for the nerds:</p>
+            <p class="h6">And for the nerds:</p>
 
             <p>
-            	<a class="has-img" href="https://github.com/KennyBrijs"><img src="style/img/social/github.png" alt="GitHub" style="width: 132px;"></a>
-                <a class="has-img" href="https://coderwall.com/kennybrijs"><img src="style/img/social/coderwall.png" alt="CoderWall" style="width: 226px;"></a>
+            	<a class="social-link grid-left has-img" href="https://github.com/KennyBrijs"><img src="style/img/social/github.png" alt="GitHub" style="width: 132px;"></a>
+                <a class="social-link grid-right has-img" href="https://coderwall.com/kennybrijs"><img src="style/img/social/coderwall.png" alt="CoderWall" style="width: 226px;"></a>
             </p>
         </div>
 
