--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
         <!--[if lt IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <p>Pork in wrogress</p>
         <div class="content">
             <header id="header" role="masthead">
                 <h1><span class="kenny">Kenny</span> <span class="brijs">Brijs</span></h1>
@@ -65,16 +64,18 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
             
         <div id="vikingstyle" class="content">
             <p class="lead">
-                <code>&lt;p role=&quot;headhunter-anti-spam&quot;&gt;</code><br>
+                <code>&lt;p role=&quot;headhunter-anti-spam&quot;&gt;</code>
+                <br><br>
                 I’m currently not looking a job, I love my job at CityLife, located in the <a href="http://vikingco.com/">VikingCo Headquarters</a>
-                <br><code>&lt;/p&gt;</code>
+                <br><br>
+                <code>&lt;/p&gt;</code>
             </p>
-            <ul class="is-unstyled">
-                <li class="grid-left">
+            <ul class="is-unstyled grid-container">
+                <li class="grid-left fb-container">
                     <h5>These guys are crazy!</h5>
                     <!-- Facebook Picture -->
                     <div id="fb-root"></div> <script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/en_US/all.js#xfbml=1"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script>
-                    <div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1" data-width="350"><div class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1">Post</a> by <a href="https://www.facebook.com/mobilevikings">Mobile Vikings</a>.</div></div>
+                    <div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1" data-width="300"><div class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1">Post</a> by <a href="https://www.facebook.com/mobilevikings">Mobile Vikings</a>.</div></div>
                 </li>
                 <li class="grid-right">
                     <h5>And so am I ;)</h5>
@@ -93,14 +94,14 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
             	you can do so through:
             </p>
 
-            <p>
+            <p class="grid-container">
             	<a class="social-link grid-left has-img" href="http://be.linkedin.com/pub/kenny-brijs/33/247/926/"><img src="style/img/social/linkedin.png" alt="LinkedIn" style="width: 160px;"></a>
                 <a class="social-link grid-right has-img" href="https://twitter.com/kennybrijs"><img src="style/img/social/twitter.png" alt="Twitter" style="width: 62px;"></a>
             </p>
 
             <p class="h6">And for the nerds:</p>
 
-            <p>
+            <p class="grid-container">
             	<a class="social-link grid-left has-img" href="https://github.com/KennyBrijs"><img src="style/img/social/github.png" alt="GitHub" style="width: 132px;"></a>
                 <a class="social-link grid-right has-img" href="https://coderwall.com/kennybrijs"><img src="style/img/social/coderwall.png" alt="CoderWall" style="width: 226px;"></a>
             </p>
@@ -114,7 +115,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
 
             <!-- Todo: html tag zoeken die text weergeeft voor screenreaders -->
         <footer id="footer" class="content" role="contentinfo">
-            <p><a href="http://sveinn.be">Design by SVEINN</a>–<a href="https://github.com/KennyBrijs/kennybrijs.github.io">View code on GitHub</a></p>
+            <p><a href="http://sveinn.be">Design by SVEINN</a> — <a href="https://github.com/KennyBrijs/kennybrijs.github.io">View code on GitHub</a></p>
         </footer>
 
     </body>
