--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
             <p class="lead">
                 <code>&lt;p role=&quot;headhunter-anti-spam&quot;&gt;</code>
                 <br><br>
-                I’m currently not looking a job, I love my job at CityLife, located in the <a href="http://vikingco.com/">VikingCo Headquarters</a>
+                I’m currently not looking for a job, I love my job at CityLife, located in the <a href="http://vikingco.com/">VikingCo Headquarters</a>
                 <br><br>
                 <code>&lt;/p&gt;</code>
             </p>
@@ -108,7 +108,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
         </div>
 
         <div class="container-color">
-            <div class="content">
+            <div id="bye" class="content">
                 <span class="h1">Bye Y’all!</span>
             </div>
         </div>
