--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                 <li class="grid-right">
                     <h5>And so am I ;)</h5>
                     <!-- Smile -->
-                    <video webkit-playsinline="" poster="http://files.parsetfss.com/305d4b7d-2a92-41f9-b57c-0b0ffd55fd5c/tfss-4eff88ec-4d77-4222-932b-506aa84e7df8-image.jpg">
+                    <video webkit-playsinline="" poster="http://files.parsetfss.com/305d4b7d-2a92-41f9-b57c-0b0ffd55fd5c/tfss-4eff88ec-4d77-4222-932b-506aa84e7df8-image.jpg" onclick="this.play();">
                         <source src="http://files.parsetfss.com/305d4b7d-2a92-41f9-b57c-0b0ffd55fd5c/tfss-b9437230-0b7c-4487-afbf-87d2c5ffc3cc-video.mp4" type="video/mp4">
                     </video>
                     <small><a href="http://www.smileapp.io/s/gjJMgFXSxV">This video was taken using Smile</a>, made by my colleagues <a href="https://twitter.com/houbenkristof">@houbenkristof</a> and <a href="https://twitter.com/bertwww">@bertwww</a></small>
