Fix firefox max-width bug

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                     <h3>CityLife Projects</h3>
                     <ul class="is-unstyled portfolio">
                         <li>
-                            <a class="has-img" href="https://citylife.be/"><img src="style/img/projects/citylife.png" alt="CityLife Website"></a>
+                            <a class="has-img is-block" href="https://citylife.be/"><img src="style/img/projects/citylife.png" alt="CityLife Website"></a>
                             <h4><a href="https://citylife.be/">citylife.be</a></h4>
                         </li>
                         <li>
-                            <a class="has-img" href="http://shoppeninleuven.be/"><img src="style/img/projects/shoppeninleuven.png" alt=""></a>
+                            <a class="has-img is-block" href="http://shoppeninleuven.be/"><img src="style/img/projects/shoppeninleuven.png" alt=""></a>
                             <h4><a href="http://shoppeninleuven.be/">shoppeninleuven.be</a></h4>
                         </li>
                         <li>
-                            <a class="has-img" href="http://horecaleuven.be/"><img src="style/img/projects/horecaleuven.png" alt=""></a>
+                            <a class="has-img is-block" href="http://horecaleuven.be/"><img src="style/img/projects/horecaleuven.png" alt=""></a>
                             <h4><a href="http://horecaleuven.be/">horecaleuven.be</a></h4>
                         </li>
                     </ul>
