--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
         <script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
 for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="//cdn.mxpnl.com/libs/mixpanel-2.2.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
 mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
-        <!-- end Mixpanel -->
         <script type="text/javascript">
             mixpanel.track("Page viewed");
         </script>
+        <!-- end Mixpanel -->
+        <!-- Video.js -->
+        <link href="//vjs.zencdn.net/4.6/video-js.css" rel="stylesheet">
+        <script src="//vjs.zencdn.net/4.6/video.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -46,16 +49,16 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                     <h3>CityLife Projects</h3>
                     <ul class="is-unstyled portfolio">
                         <li>
-                            <a class="has-img is-block" href="https://citylife.be/"><img src="style/img/projects/citylife.png" alt="CityLife Website"></a>
-                            <h4><a href="https://citylife.be/">citylife.be</a></h4>
+                            <a class="has-img is-block" target="_blank" href="https://citylife.be/"><img src="style/img/projects/citylife.png" alt="CityLife Website"></a>
+                            <a class="is-img-link-helper" target="_blank" href="https://citylife.be/">citylife.be→</a>
                         </li>
                         <li>
-                            <a class="has-img is-block" href="http://shoppeninleuven.be/"><img src="style/img/projects/shoppeninleuven.png" alt=""></a>
-                            <h4><a href="http://shoppeninleuven.be/">shoppeninleuven.be</a></h4>
+                            <a class="has-img is-block" target="_blank" href="http://shoppeninleuven.be/"><img src="style/img/projects/shoppeninleuven.png" alt=""></a>
+                            <a class="is-img-link-helper" target="_blank" href="http://shoppeninleuven.be/">shoppeninleuven.be→</a>
                         </li>
                         <li>
-                            <a class="has-img is-block" href="http://horecaleuven.be/"><img src="style/img/projects/horecaleuven.png" alt=""></a>
-                            <h4><a href="http://horecaleuven.be/">horecaleuven.be</a></h4>
+                            <a class="has-img is-block" target="_blank" href="http://horecaleuven.be/"><img src="style/img/projects/horecaleuven.png" alt=""></a>
+                            <a class="is-img-link-helper" target="_blank" href="http://horecaleuven.be/">horecaleuven.be→</a>
                         </li>
                     </ul>
                 </div>
@@ -72,13 +75,13 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
             </p>
             <ul class="is-unstyled grid-container">
                 <li class="grid-left fb-container">
-                    <h5>These guys are crazy!</h5>
+                    <h4>These guys are crazy!</h4>
                     <!-- Facebook Picture -->
                     <div id="fb-root"></div> <script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/en_US/all.js#xfbml=1"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script>
                     <div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1" data-width="300"><div class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1">Post</a> by <a href="https://www.facebook.com/mobilevikings">Mobile Vikings</a>.</div></div>
                 </li>
                 <li class="grid-right">
-                    <h5>And so am I ;)</h5>
+                    <h4>And so am I ;)</h4>
                     <!-- Smile -->
                     <video webkit-playsinline="" poster="http://files.parsetfss.com/305d4b7d-2a92-41f9-b57c-0b0ffd55fd5c/tfss-4eff88ec-4d77-4222-932b-506aa84e7df8-image.jpg" onclick="this.play();">
                         <source src="http://files.parsetfss.com/305d4b7d-2a92-41f9-b57c-0b0ffd55fd5c/tfss-b9437230-0b7c-4487-afbf-87d2c5ffc3cc-video.mp4" type="video/mp4">
@@ -89,7 +92,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
         </div>
 
         <div id="social" class="content">
-    		<p class="h6">
+    		<p class="h5">
             	But if you wanna connect,
             	you can do so through:
             </p>
@@ -99,7 +102,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                 <a class="social-link grid-right has-img" href="https://twitter.com/kennybrijs"><img src="style/img/social/twitter.png" alt="Twitter" style="width: 62px;"></a>
             </p>
 
-            <p class="h6">And for the nerds:</p>
+            <p class="h5">And for the nerds:</p>
 
             <p class="grid-container">
             	<a class="social-link grid-left has-img" href="https://github.com/KennyBrijs"><img src="style/img/social/github.png" alt="GitHub" style="width: 132px;"></a>
