--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
         
         <div class="container-color">
             <div class="content">
-                <p id="intro" class="lead"><a class="link-invisible" href="https://www.youtube.com/watch?v=VV6In1K8zKk">Hi! I’m Kenny,</a>
+                <p id="intro" class="lead"><a href="https://www.youtube.com/watch?v=VV6In1K8zKk">Hi! I’m Kenny,</a>
                 <br><br>
                 a Front-End Webdeveloper from <a href="https://www.google.be/maps/place/Webdesign+en+-ontwikkeling/@50.9452126,4.0294635,17z/data=!4m7!1m4!3m3!1s0x47c397fe791f9e19:0x690c6108e171e5ab!2sVilainstraat!3b1!3m1!1s0x0:0xaeefb8f985b6191b">Aalst, Belgium</a>
                 <br>
@@ -69,7 +69,8 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
             <p class="lead">
                 <code>&lt;p role=&quot;headhunter-anti-spam&quot;&gt;</code>
                 <br><br>
-                I’m currently not looking for a job, I love my job at CityLife, located in the <a href="http://vikingco.com/">VikingCo Headquarters</a>
+                I’m currently not looking for a job,<br>
+                I love working at the <a href="http://vikingco.com/">VikingCo Headquarters</a>.
                 <br><br>
                 <code>&lt;/p&gt;</code>
             </p>
@@ -98,15 +99,15 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
             </p>
 
             <p class="grid-container">
-            	<a class="social-link grid-left has-img" href="http://be.linkedin.com/pub/kenny-brijs/33/247/926/"><img src="style/img/social/linkedin.png" alt="LinkedIn" style="width: 160px;"></a>
-                <a class="social-link grid-right has-img" href="https://twitter.com/kennybrijs"><img src="style/img/social/twitter.png" alt="Twitter" style="width: 62px;"></a>
+            	<a class="social-link grid-left has-img" href="http://be.linkedin.com/pub/kenny-brijs/33/247/926/"><img class="center" src="style/img/social/linkedin.png" alt="LinkedIn" style="width: 160px;"></a>
+                <a class="social-link grid-right has-img" href="https://twitter.com/kennybrijs"><img class="center" src="style/img/social/twitter.png" alt="Twitter" style="width: 62px;"></a>
             </p>
 
             <p class="h5">And for the nerds:</p>
 
-            <p class="grid-container">
-            	<a class="social-link grid-left has-img" href="https://github.com/KennyBrijs"><img src="style/img/social/github.png" alt="GitHub" style="width: 132px;"></a>
-                <a class="social-link grid-right has-img" href="https://coderwall.com/kennybrijs"><img src="style/img/social/coderwall.png" alt="CoderWall" style="width: 226px;"></a>
+            <p class="grid-container text-center">
+            	<a class="social-link grid-left has-img" href="https://github.com/KennyBrijs"><img class="center" src="style/img/social/github.png" alt="GitHub" style="width: 132px;"></a>
+                <a class="social-link grid-right has-img" href="https://coderwall.com/kennybrijs"><img class="center" src="style/img/social/coderwall.png" alt="CoderWall" style="width: 226px;"></a>
             </p>
         </div>
 
