Serve smile-video locally and add FireFox support

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                     <h4>And so am I ;)</h4>
                     <!-- Smile -->
                     <video id="salto-frontale" class="video-js vjs-default-skin"
-                      controls preload="auto" height="300" preload
-                      poster="http://files.parsetfss.com/305d4b7d-2a92-41f9-b57c-0b0ffd55fd5c/tfss-4eff88ec-4d77-4222-932b-506aa84e7df8-image.jpg"
+                      controls height="300" preload poster="salto-frontale.jpg"
                       data-setup="">
-                        <source src="http://files.parsetfss.com/305d4b7d-2a92-41f9-b57c-0b0ffd55fd5c/tfss-b9437230-0b7c-4487-afbf-87d2c5ffc3cc-video.mp4" type='video/mp4' />
+                        <source src="salto-frontale.mp4" type='video/mp4' />
+                        <source src="salto-frontale.ogv" type='video/ogg' />
                         <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
                     </video>
                     <small><a href="http://www.smileapp.io/s/gjJMgFXSxV">This video was taken using Smile</a>, made by my colleagues <a href="https://twitter.com/houbenkristof">@houbenkristof</a> and <a href="https://twitter.com/bertwww">@bertwww</a></small>
