--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                     <h4>And so am I ;)</h4>
                     <!-- Smile -->
                     <video id="salto-frontale" class="video-js vjs-default-skin"
-                      controls height="300" preload poster="salto-frontale.jpg"
+                      controls preload width="314" height="314" poster="salto-frontale.jpg"
                       data-setup="">
                         <source src="salto-frontale.mp4" type='video/mp4' />
                         <source src="salto-frontale.ogv" type='video/ogg' />
