Undo links opening in new tabs
Preferred behavior should not be determined in
the user’s place

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                     <h3>CityLife Projects</h3>
                     <ul class="is-unstyled portfolio">
                         <li>
-                            <a class="has-img is-block" target="_blank" href="https://citylife.be/"><img src="style/img/projects/citylife.png" alt="CityLife Website"></a>
-                            <a class="is-img-link-helper" target="_blank" href="https://citylife.be/">citylife.be→</a>
+                            <a class="has-img is-block" href="https://citylife.be/"><img src="style/img/projects/citylife.png" alt="CityLife Website"></a>
+                            <a class="is-img-link-helper" href="https://citylife.be/">citylife.be</a>
                         </li>
                         <li>
-                            <a class="has-img is-block" target="_blank" href="http://shoppeninleuven.be/"><img src="style/img/projects/shoppeninleuven.png" alt=""></a>
-                            <a class="is-img-link-helper" target="_blank" href="http://shoppeninleuven.be/">shoppeninleuven.be→</a>
+                            <a class="has-img is-block" href="http://shoppeninleuven.be/"><img src="style/img/projects/shoppeninleuven.png" alt=""></a>
+                            <a class="is-img-link-helper" href="http://shoppeninleuven.be/">shoppeninleuven.be</a>
                         </li>
                         <li>
-                            <a class="has-img is-block" target="_blank" href="http://horecaleuven.be/"><img src="style/img/projects/horecaleuven.png" alt=""></a>
-                            <a class="is-img-link-helper" target="_blank" href="http://horecaleuven.be/">horecaleuven.be→</a>
+                            <a class="has-img is-block" href="http://horecaleuven.be/"><img src="style/img/projects/horecaleuven.png" alt=""></a>
+                            <a class="is-img-link-helper" href="http://horecaleuven.be/">horecaleuven.be</a>
                         </li>
                     </ul>
                 </div>
