--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                     <h3>CityLife Projects</h3>
                     <ul class="is-unstyled portfolio">
                         <li>
-                            <a class="has-img is-block" href="https://citylife.be/"><img src="style/img/projects/citylife.png" alt="CityLife Website"></a>
-                            <a class="is-img-link-helper" href="https://citylife.be/">citylife.be</a>
+                            <a id="projects-citylife-img" class="has-img is-block" href="https://citylife.be/"><img src="style/img/projects/citylife.png" alt="CityLife Website"></a>
+                            <a id="projects-citylife-text" class="is-img-link-helper" href="https://citylife.be/">citylife.be</a>
                         </li>
                         <li>
-                            <a class="has-img is-block" href="http://shoppeninleuven.be/"><img src="style/img/projects/shoppeninleuven.png" alt=""></a>
-                            <a class="is-img-link-helper" href="http://shoppeninleuven.be/">shoppeninleuven.be</a>
+                            <a id="projects-shoppeninleuven-img" class="has-img is-block" href="http://shoppeninleuven.be/"><img src="style/img/projects/shoppeninleuven.png" alt=""></a>
+                            <a id="projects-shoppeninleuven-text" class="is-img-link-helper" href="http://shoppeninleuven.be/">shoppeninleuven.be</a>
                         </li>
                         <li>
-                            <a class="has-img is-block" href="http://horecaleuven.be/"><img src="style/img/projects/horecaleuven.png" alt=""></a>
-                            <a class="is-img-link-helper" href="http://horecaleuven.be/">horecaleuven.be</a>
+                            <a id="projects-horecaleuven-img" class="has-img is-block" href="http://horecaleuven.be/"><img src="style/img/projects/horecaleuven.png" alt=""></a>
+                            <a id="projects-horecaleuven-text" class="is-img-link-helper" href="http://horecaleuven.be/">horecaleuven.be</a>
                         </li>
                     </ul>
                 </div>
@@ -123,6 +123,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
             <p><a href="http://sveinn.be">Design by SVEINN</a> — <a href="https://github.com/KennyBrijs/kennybrijs.github.io">View code on GitHub</a></p>
         </footer>
 
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="style/js/mixpanel.js"></script>
     </body>
 </html>
