Track social network visits

--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
             </p>
 
             <p class="grid-container">
-            	<a class="social-link grid-left has-img" href="http://be.linkedin.com/pub/kenny-brijs/33/247/926/"><img class="center" src="style/img/social/linkedin.png" alt="LinkedIn" style="width: 160px;"></a>
-                <a class="social-link grid-right has-img" href="https://twitter.com/kennybrijs"><img class="center" src="style/img/social/twitter.png" alt="Twitter" style="width: 62px;"></a>
+            	<a id="social-network-linkedin" class="social-link grid-left has-img" href="http://be.linkedin.com/pub/kenny-brijs/33/247/926/"><img class="center" src="style/img/social/linkedin.png" alt="LinkedIn" style="width: 160px;"></a>
+                <a id="social-network-twitter" class="social-link grid-right has-img" href="https://twitter.com/kennybrijs"><img class="center" src="style/img/social/twitter.png" alt="Twitter" style="width: 62px;"></a>
             </p>
 
             <p class="h5">And for the nerds:</p>
 
             <p class="grid-container text-center">
-            	<a class="social-link grid-left has-img" href="https://github.com/KennyBrijs"><img class="center" src="style/img/social/github.png" alt="GitHub" style="width: 132px;"></a>
-                <a class="social-link grid-right has-img" href="https://coderwall.com/kennybrijs"><img class="center" src="style/img/social/coderwall.png" alt="CoderWall" style="width: 226px;"></a>
+            	<a id="social-network-github" class="social-link grid-left has-img" href="https://github.com/KennyBrijs"><img class="center" src="style/img/social/github.png" alt="GitHub" style="width: 132px;"></a>
+                <a id="social-network-coderwall" class="social-link grid-right has-img" href="https://coderwall.com/kennybrijs"><img class="center" src="style/img/social/coderwall.png" alt="CoderWall" style="width: 226px;"></a>
             </p>
         </div>
 
