Track secondary links, code views and video plays

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
         
         <div class="container-color">
             <div class="content">
-                <p id="intro" class="lead"><a href="https://www.youtube.com/watch?v=VV6In1K8zKk">Hi! I’m Kenny,</a>
+                <p id="intro" class="lead"><a id="secondary-link-jackass-kenny-rogers" href="https://www.youtube.com/watch?v=VV6In1K8zKk">Hi! I’m Kenny,</a>
                 <br><br>
-                a Front-End Webdeveloper from <a href="https://www.google.be/maps/place/Webdesign+en+-ontwikkeling/@50.9452126,4.0294635,17z/data=!4m7!1m4!3m3!1s0x47c397fe791f9e19:0x690c6108e171e5ab!2sVilainstraat!3b1!3m1!1s0x0:0xaeefb8f985b6191b">Aalst, Belgium</a>
+                a Front-End Webdeveloper from <a id="secondary-link-google-maps-aalst" href="https://www.google.be/maps/place/Webdesign+en+-ontwikkeling/@50.9452126,4.0294635,17z/data=!4m7!1m4!3m3!1s0x47c397fe791f9e19:0x690c6108e171e5ab!2sVilainstraat!3b1!3m1!1s0x0:0xaeefb8f985b6191b">Aalst, Belgium</a>
                 <br>
-                currently working <a href="https://twitter.com/CityLifeBE">@CityLifeBE</a> in <a href="https://www.google.be/maps/place/VikingCo/@50.952665,5.350945,17z/data=!3m1!4b1!4m2!3m1!1s0x47c121428946bea7:0xa12ca4effbefe9db">Hasselt, Belgium</a></p>
+                currently working <a id="secondary-link-citylife-twitter" href="https://twitter.com/CityLifeBE">@CityLifeBE</a> in <a id="secondary-link-google-maps-hasselt" href="https://www.google.be/maps/place/VikingCo/@50.952665,5.350945,17z/data=!3m1!4b1!4m2!3m1!1s0x47c121428946bea7:0xa12ca4effbefe9db">Hasselt, Belgium</a></p>
                 <div id="projects">
                     <h3>CityLife Projects</h3>
                     <ul class="is-unstyled portfolio">
@@ -67,7 +67,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                 <code>&lt;p role=&quot;headhunter-anti-spam&quot;&gt;</code>
                 <br><br>
                 I’m currently not looking for a job,<br>
-                I love working at the <a href="http://vikingco.com/">VikingCo Headquarters</a>.
+                I love working at the <a id="secondary-link-vikingco" href="http://vikingco.com/">VikingCo Headquarters</a>.
                 <br><br>
                 <code>&lt;/p&gt;</code>
             </p>
@@ -88,7 +88,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                         <source src="salto-frontale.ogv" type='video/ogg' />
                         <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
                     </video>
-                    <small><a href="http://www.smileapp.io/s/gjJMgFXSxV">This video was taken using Smile</a>, made by my colleagues <a href="https://twitter.com/houbenkristof">@houbenkristof</a> and <a href="https://twitter.com/bertwww">@bertwww</a></small>
+                    <small><a id="secondary-link-smile" href="http://www.smileapp.io/s/gjJMgFXSxV">This video was taken using Smile</a>, made by my colleagues <a id="secondary-link-smile-kristof-twitter" href="https://twitter.com/houbenkristof">@houbenkristof</a> and <a id="secondary-link-smile-bert-twitter" href="https://twitter.com/bertwww">@bertwww</a></small>
                 </li>
             </ul>
         </div>
@@ -120,7 +120,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
 
             <!-- Todo: html tag zoeken die text weergeeft voor screenreaders -->
         <footer id="footer" class="content" role="contentinfo">
-            <p><a href="http://sveinn.be">Design by SVEINN</a> — <a href="https://github.com/KennyBrijs/kennybrijs.github.io">View code on GitHub</a></p>
+            <p><a id="secondary-link-sveinn" href="http://sveinn.be">Design by SVEINN</a> — <a id="code-viewed-github" href="https://github.com/KennyBrijs/kennybrijs.github.io">View code on GitHub</a></p>
         </footer>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
