change maps url

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
             <div class="content">
                 <p id="intro" class="lead"><a id="secondary-link-jackass-kenny-rogers" href="https://www.youtube.com/watch?v=VV6In1K8zKk">Hi! I’m Kenny,</a>
                 <br><br>
-                a Front-End Webdeveloper from <a id="secondary-link-google-maps-aalst" href="https://www.google.be/maps/place/Webdesign+en+-ontwikkeling/@50.9452126,4.0294635,17z/data=!4m7!1m4!3m3!1s0x47c397fe791f9e19:0x690c6108e171e5ab!2sVilainstraat!3b1!3m1!1s0x0:0xaeefb8f985b6191b">Aalst, Belgium</a>
+                a Front-End Webdeveloper from <a id="secondary-link-google-maps-aalst" href="https://www.google.com/maps/place/Grote+Markt,+9300+Aalst,+Belgium/@50.9195624,4.1783042,10z/data=!4m2!3m1!1s0x47c3bd59763e8331:0xa6e63b9d2e21d932">Aalst, Belgium</a>
                 <br>
                 currently working <a id="secondary-link-citylife-twitter" href="https://twitter.com/CityLifeBE">@CityLifeBE</a> in <a id="secondary-link-google-maps-hasselt" href="https://www.google.be/maps/place/VikingCo/@50.952665,5.350945,17z/data=!3m1!4b1!4m2!3m1!1s0x47c121428946bea7:0xa12ca4effbefe9db">Hasselt, Belgium</a></p>
                 <div id="projects">
