--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
         <!--[if lt IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="content">
-            <header id="header" role="masthead">
+        <header id="header" role="masthead">
+            <div class="content">
                 <h1><span class="kenny">Kenny</span> <span class="brijs">Brijs</span></h1>
                 <h2 style="color: #555;">Front-End Webdeveloper</h2>
-            </header>
-        </div>
+            </div>
+        </header>
         
         <div class="container-color">
             <div class="content">
-                <p id="intro" class="lead"><a id="secondary-link-jackass-kenny-rogers" href="https://www.youtube.com/watch?v=VV6In1K8zKk">Hi! I’m Kenny,</a>
+                <p id="intro" class="lead">Hi! I’m Kenny,
                 <br><br>
-                a Front-End Webdeveloper from <a id="secondary-link-google-maps-aalst" href="https://www.google.com/maps/place/Grote+Markt,+9300+Aalst,+Belgium/@50.9195624,4.1783042,10z/data=!4m2!3m1!1s0x47c3bd59763e8331:0xa6e63b9d2e21d932">Aalst, Belgium</a>
+                a Front-End Webdeveloper from Aalst, Belgium
                 <br>
-                currently working <a id="secondary-link-citylife-twitter" href="https://twitter.com/CityLifeBE">@CityLifeBE</a> in <a id="secondary-link-google-maps-hasselt" href="https://www.google.be/maps/place/VikingCo/@50.952665,5.350945,17z/data=!3m1!4b1!4m2!3m1!1s0x47c121428946bea7:0xa12ca4effbefe9db">Hasselt, Belgium</a></p>
+                currently working at <a id="secondary-link-citylife-twitter" href="https://citylife.be/">citylife.be</a> in Hasselt.</p>
                 <div id="projects">
                     <h3>CityLife Projects</h3>
                     <ul class="is-unstyled portfolio">
@@ -64,16 +64,16 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
             
         <div id="vikingstyle" class="content">
             <p class="lead">
-                <code>&lt;p role=&quot;headhunter-anti-spam&quot;&gt;</code>
+                <!-- <code>&lt;p role=&quot;headhunter-anti-spam&quot;&gt;</code>
                 <br><br>
-                I’m currently not looking for a job,<br>
+                I’m currently not looking for a job,<br> -->
                 I love working at the <a id="secondary-link-vikingco" href="http://vikingco.com/">VikingCo Headquarters</a>.
-                <br><br>
-                <code>&lt;/p&gt;</code>
+                <!-- <br><br>
+                <code>&lt;/p&gt;</code> -->
             </p>
             <ul class="is-unstyled grid-container">
                 <li class="grid-left fb-container">
-                    <h4>These guys are crazy!</h4>
+                    <h4 class="text-right">These guys are crazy</h4>
                     <!-- Facebook Picture -->
                     <div id="fb-root"></div> <script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/en_US/all.js#xfbml=1"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script>
                     <div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1" data-width="300"><div class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1">Post</a> by <a href="https://www.facebook.com/mobilevikings">Mobile Vikings</a>.</div></div>
