Improve by simplifying :)

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
             </p>
             <ul class="is-unstyled grid-container">
                 <li class="grid-left fb-container">
-                    <h4 class="text-right">These guys are crazy</h4>
+                    <h4 id="vikingstyle-title-facebook">These guys are crazy</h4>
                     <!-- Facebook Picture -->
                     <div id="fb-root"></div> <script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/en_US/all.js#xfbml=1"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script>
                     <div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1" data-width="300"><div class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1">Post</a> by <a href="https://www.facebook.com/mobilevikings">Mobile Vikings</a>.</div></div>
                 </li>
-                <li class="grid-right">
-                    <h4>And so am I ;)</h4>
+                <li class="grid-right smile-container">
+                    <h4 id="vikingstyle-title-smile">And so am I ;)</h4>
                     <!-- Smile -->
                     <video id="salto-frontale" class="video-js vjs-default-skin"
                       controls preload width="314" height="314" poster="salto-frontale.jpg"
