--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <!doctype html>
+<!--
+
+========================================
+LOOKING FOR A PASSIONATE FRONT-END GEEK?
+========================================
+
+Check the README in the GitHub project of this site:
+https://github.com/KennyBrijs/kennybrijs.github.io#kenny-brijs
+
+(or click View code on GitHub in the footer)
+
+-->
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
