Add explanation for inline style

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
         <header id="header" role="masthead">
             <div class="content">
                 <h1><span class="kenny">Kenny</span> <span class="brijs">Brijs</span></h1>
+                <!-- 'WTF?! Inline styles?!' I hear you think :) This color is only used once in the design—as an exception—and not part of the SASS variable stack -->
                 <h2 style="color: #555;">Front-End Webdeveloper</h2>
             </div>
         </header>
