Make ‘view code’ link point to README

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
 
             <!-- Todo: html tag zoeken die text weergeeft voor screenreaders -->
         <footer id="footer" class="content" role="contentinfo">
-            <p><a id="secondary-link-sveinn" href="http://sveinn.be">Design by SVEINN</a> — <a id="code-viewed-github" href="https://github.com/KennyBrijs/kennybrijs.github.io">View code on GitHub</a></p>
+            <p><a id="secondary-link-sveinn" href="http://sveinn.be">Design by SVEINN</a> — <a id="code-viewed-github" href="https://github.com/KennyBrijs/kennybrijs.github.io#kenny-brijs">View code on GitHub</a></p>
         </footer>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
