Update to thanksys

--- a/index.html
+++ b/index.html
@@ -50,18 +50,21 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
         
         <div class="container-color">
             <div class="content">
-                <p id="intro" class="lead">Hi! I’m Kenny,
+                <p id="intro" class="lead">Hi! I’m Kenny
                 <br><br>
-                a Front-End Webdeveloper from Aalst, Belgium
+                a Front-End Webdeveloper from Aalst (Belgium)
                 <br>
-                currently working at <a id="secondary-link-citylife-twitter" href="https://citylife.be/">citylife.be</a> in Hasselt.</p>
+                working at <a href="http://thanksys.com/">Thanksys</a> in Hasselt,
+                <br><br>
+                <a href="https://github.com/KennyBrijs/kennybrijs.github.io#kenny-brijs">Looking to work with cool webgeeks in Ghent.</a>
+                </p>
+                <!--
                 <div id="projects">
                     <h3>CityLife Projects</h3>
                     <ul class="is-unstyled portfolio">
                         <li>
                             <a id="projects-citylife-img" class="has-img is-block" href="https://citylife.be/"><img src="style/img/projects/citylife.png" alt="CityLife Website"></a>
                             <a id="projects-citylife-text" class="is-img-link-helper" href="https://citylife.be/">citylife.be</a>
-                            <!--
                             <p>
                                 Frameworks:
                                 <a href="//angularjs.org/">AngularJS</a> /
@@ -75,7 +78,6 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                                 <a href="http://sass-lang.com/">Sassy CSS3</a> /
                                 <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5">HTML5</a>
                             </p>
-                            -->
                         </li>
                         <li>
                             <a id="projects-shoppeninleuven-img" class="has-img is-block" href="http://shoppeninleuven.be/"><img src="style/img/projects/shoppeninleuven.png" alt=""></a>
@@ -87,28 +89,27 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                         </li>
                     </ul>
                 </div>
+                -->
             </div>
         </div>
-            
+        <!--
         <div id="vikingstyle" class="content">
             <p class="lead">
-                <!-- <code>&lt;p role=&quot;headhunter-anti-spam&quot;&gt;</code>
+                <code>&lt;p role=&quot;headhunter-anti-spam&quot;&gt;</code>
                 <br><br>
-                I’m currently not looking for a job,<br> -->
+                I’m currently not looking for a job,<br>
                 I love working at the <a id="secondary-link-vikingco" href="http://vikingco.com/">VikingCo Headquarters</a>.
-                <!-- <br><br>
-                <code>&lt;/p&gt;</code> -->
+                <br><br>
+                <code>&lt;/p&gt;</code>
             </p>
             <ul class="is-unstyled grid-container">
                 <li class="grid-left fb-container">
                     <h4 id="vikingstyle-title-facebook">These guys are crazy</h4>
-                    <!-- Facebook Picture -->
                     <div id="fb-root"></div> <script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/en_US/all.js#xfbml=1"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script>
                     <div class="fb-post" data-href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1" data-width="300"><div class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/photo.php?fbid=910276928998245&amp;set=a.180576041968341.56652.126215907404355&amp;type=1">Post</a> by <a href="https://www.facebook.com/mobilevikings">Mobile Vikings</a>.</div></div>
                 </li>
                 <li class="grid-right smile-container">
                     <h4 id="vikingstyle-title-smile">And so am I ;)</h4>
-                    <!-- Smile -->
                     <video id="salto-frontale" class="video-js vjs-default-skin"
                       controls preload width="314" height="314" poster="salto-frontale.jpg"
                       data-setup="">
@@ -120,7 +121,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                 </li>
             </ul>
         </div>
-
+        -->
         <div id="social" class="content">
     		<p class="h5">
             	If you want to connect,
