--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                 <br><br>
                 a Front-End Webdeveloper from Aalst (Belgium)
                 <br>
-                working at <a href="http://thanksys.com/">Thanksys</a> in Hasselt,
-                <br><br>
-                <a href="https://github.com/KennyBrijs/kennybrijs.github.io#kenny-brijs">Looking to work with cool webgeeks in Ghent.</a>
+                working at <a href="http://thanksys.com/">Thanksys</a> for <a href="http://www.fidcash.fr/">fidcash.fr</a>
                 </p>
                 <!--
                 <div id="projects">
