--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                 <h2 style="color: #555;">Front-End Webdeveloper</h2>
             </div>
         </header>
-        
-        <div class="container-color">
-            <div class="content">
-                <p id="intro" class="lead">Hi! I’m Kenny
+
+        <!-- <div class="container-color">
+            <div class="content"> -->
+                <!-- <p id="intro" class="lead">Hi! I’m Kenny
                 <br><br>
                 a Front-End Webdeveloper from Aalst (Belgium)
                 <br>
                 working at <a href="http://thanksys.com/">Thanksys</a> for <a href="http://www.fidcash.fr/">fidcash.fr</a>
-                </p>
+                </p> -->
                 <!--
                 <div id="projects">
                     <h3>CityLife Projects</h3>
@@ -88,8 +88,8 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
                     </ul>
                 </div>
                 -->
-            </div>
-        </div>
+            <!-- </div>
+        </div> -->
         <!--
         <div id="vikingstyle" class="content">
             <p class="lead">
@@ -121,17 +121,17 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
         </div>
         -->
         <div id="social" class="content">
-    		<p class="h5">
+    		<!-- <p class="h5">
             	If you want to connect,
             	you can do so through:
-            </p>
+            </p> -->
 
             <p class="grid-container">
             	<a id="social-network-linkedin" class="social-link grid-left has-img" href="http://be.linkedin.com/pub/kenny-brijs/33/247/926/"><img class="center" src="style/img/social/linkedin.png" alt="LinkedIn" style="width: 160px;"></a>
                 <a id="social-network-twitter" class="social-link grid-right has-img" href="https://twitter.com/kennybrijs"><img class="center" src="style/img/social/twitter.png" alt="Twitter" style="width: 62px;"></a>
             </p>
 
-            <p class="h5">And for the nerds:</p>
+            <!-- <p class="h5">And for the nerds:</p> -->
 
             <p class="grid-container text-center">
             	<a id="social-network-github" class="social-link grid-left has-img" href="https://github.com/KennyBrijs"><img class="center" src="style/img/social/github.png" alt="GitHub" style="width: 132px;"></a>
@@ -139,16 +139,16 @@ mixpanel.init("8775c39c1f63e25176bfa96e8eb32d90");</script>
             </p>
         </div>
 
-        <div class="container-color">
+        <!-- <div class="container-color">
             <div id="bye" class="content">
                 <span class="h1">Bye Y’all!</span>
             </div>
-        </div>
+        </div> -->
 
-            <!-- Todo: html tag zoeken die text weergeeft voor screenreaders -->
-        <footer id="footer" class="content" role="contentinfo">
+
+        <!-- <footer id="footer" class="content" role="contentinfo">
             <p><a id="secondary-link-sveinn" href="http://sveinn.be">Design by SVEINN</a> — <a id="code-viewed-github" href="https://github.com/KennyBrijs/kennybrijs.github.io#kenny-brijs">View code on GitHub</a></p>
-        </footer>
+        </footer> -->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="style/js/mixpanel.js"></script>
